# resume-screening

./: .gitignore  langextract_helper.py  main.py  ollama_models.py  pymupdf_helper.py  pyproject.toml  unstructured_helper.py
constants/: __init__.py  main.py
pdf_to_img/: __init__.py  helper.py  main.py
